crash_log/Crash2024-09-16 21 24 42 2442.txt
C:\Users\HP\Desktop\Transport App - Bloc\back_end\taxi_driver_node\controllers\sockect_controller.js:56
        })
         ^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1281:20)
    at Module._compile (node:internal/modules/cjs/loader:1321:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
    at Module.load (node:internal/modules/cjs/loader:1208:32)
    at Module._load (node:internal/modules/cjs/loader:1024:12)
    at Module.require (node:internal/modules/cjs/loader:1233:19)
    at require (node:internal/modules/helpers:179:18)
    at C:\Users\HP\Desktop\Transport App - Bloc\back_end\taxi_driver_node\app.js:47:13
    at Array.forEach (<anonymous>)
    at Object.<anonymous> (C:\Users\HP\Desktop\Transport App - Bloc\back_end\taxi_driver_node\app.js:45:33)